updated contact details, updated hero image

--- a/index.html
+++ b/index.html
@@ -48,12 +48,11 @@
         <ul class="hero-socials">
           <li><a href="https://github.com/sandile05" target="_blank"><i class="fa-brands fa-github"></i></a></li>
           <li><a href="https://linkedin.com/in/sandiledev" target="_blank"><i class="fa-brands fa-linkedin"></i></a></li>
-          <li><a href="https://x.com/dev_Sandile" target="_blank"><i class="fa-brands fa-x-twitter"></i></a></li>
         </ul>
       </div>
     
       <div class="hero-image" data-aos="fade-in" data-aos-delay="200">
-        <img src="./assets/pic1.png" alt="Sandile profile" />
+        <img src="./assets/picture.png" alt="Sandile profile" />
       </div>
     
       <div class="hero-down-arrow">
@@ -311,8 +310,8 @@
         <ul class="contact__list">
           <li><a href="mailto:sandiledev5@gmail.com" class="contact__list-item" target="_blank"><i class="fas fa-envelope"></i></a></li>
           <li><a href="https://m.me/ssandile.ndlovu" class="contact__list-item" target="_blank"><i class="fab fa-facebook-messenger"></i></a></li>
-          <li><a href="https://wa.me/+27749258393" class="contact__list-item" target="_blank"><i class="fab fa-whatsapp"></i></a></li>
-          <li><a href="tel:+27749258393" class="contact__list-item" target="_blank"><i class="fas fa-phone"></i></a></li>
+          <li><a href="https://wa.me/+27816802610" class="contact__list-item" target="_blank"><i class="fab fa-whatsapp"></i></a></li>
+          <li><a href="tel:+27816802610" class="contact__list-item" target="_blank"><i class="fas fa-phone"></i></a></li>
         </ul>
       </div>
     </section>
@@ -330,7 +329,6 @@
       <ul class="footer__socials">
         <li><a href="https://github.com/sandile05" target="_blank"><i class="fa-brands fa-github"></i></a></li>
         <li><a href="https://linkedin.com/in/sandiledev" target="_blank"><i class="fa-brands fa-linkedin"></i></a></li>
-        <li><a href="https://x.com/dev_Sandile" target="_blank"><i class="fa-brands fa-x-twitter"></i></a></li>
       </ul>
     </div>
     <div class="footer__copyright">
