--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
       <h1 class="title" data-aos="fade-up" data-aos-delay="200">Projects</h1>
       <!-- Filter buttons -->
       <ul class="project__categories">
-        <li class="mixitup-control-active" data-filter="all">All(3)</li>
+        <li class="mixitup-control-active" data-filter="all">All(4)</li>
         <li data-filter=".html-css-js">Html, Css, Js</li>
         <li data-filter=".bootstrap">Bootstrap</li>
         <!-- <li data-filter=".ux-design">UX/UI Design</li> -->
@@ -220,6 +220,17 @@
 
       <!-- Project container -->
       <div class="projects__container">
+        <div class="project mix html-css-js" style="background-image: url('./assets/ebs.png');" data-aos="fade-in" data-aos-delay="200">
+          <div class="project-content">
+            <h3>EBS GROUP pty ltd.</h3>
+            <p class="project-title">Multi Service Security company</p>
+            <p class="description">Proffessional website for EBS Group. (client work)</p>
+            <div class="project-buttons">
+              <a href="https://ebsgroup.vercel.app" target="_blank" class="btn btn-color-2">Live Site</a>
+              <!-- <a disabled href="https://github.com/sandile05/natures-domain" target="_blank" class="btn btn-color-1">GitHub</a> -->
+            </div>
+          </div>
+        </div>
 
         <div class="project mix html-css-js" style="background-image: url('./assets/natures-domain.png');" data-aos="fade-in" data-aos-delay="200">
           <div class="project-content">
