--- a/index.html
+++ b/index.html
@@ -220,17 +220,17 @@
 
       <!-- Project container -->
       <div class="projects__container">
-        <div class="project mix html-css-js" style="background-image: url('./assets/ebs.png');" data-aos="fade-in" data-aos-delay="200">
+        <!-- <div class="project mix html-css-js" style="background-image: url('./assets/ebs.png');" data-aos="fade-in" data-aos-delay="200">
           <div class="project-content">
             <h3>EBS GROUP pty ltd.</h3>
             <p class="project-title">Multi Service Security company</p>
             <p class="description">Proffessional website for EBS Group. (client work)</p>
             <div class="project-buttons">
               <a href="https://ebsgroup.vercel.app" target="_blank" class="btn btn-color-2">Live Site</a>
-              <!-- <a disabled href="https://github.com/sandile05/natures-domain" target="_blank" class="btn btn-color-1">GitHub</a> -->
+              <a disabled href="https://github.com/sandile05/natures-domain" target="_blank" class="btn btn-color-1">GitHub</a>
             </div>
           </div>
-        </div>
+        </div> -->
 
         <div class="project mix html-css-js" style="background-image: url('./assets/natures-domain.png');" data-aos="fade-in" data-aos-delay="200">
           <div class="project-content">
