added ebs group

--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
 
       <!-- Project container -->
       <div class="projects__container">
-        <!-- <div class="project mix html-css-js" style="background-image: url('./assets/ebs.png');" data-aos="fade-in" data-aos-delay="200">
+        <div class="project mix html-css-js" style="background-image: url('./assets/ebs.png');" data-aos="fade-in" data-aos-delay="200">
           <div class="project-content">
             <h3>EBS GROUP pty ltd.</h3>
             <p class="project-title">Multi Service Security company</p>
@@ -230,7 +230,7 @@
               <a disabled href="https://github.com/sandile05/natures-domain" target="_blank" class="btn btn-color-1">GitHub</a>
             </div>
           </div>
-        </div> -->
+        </div>
 
         <div class="project mix html-css-js" style="background-image: url('./assets/natures-domain.png');" data-aos="fade-in" data-aos-delay="200">
           <div class="project-content">
